2017-08-23  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	Adapts interface to a few changes in the C API. Adds functionality
	for returning Sparse and ArrayOfIndex and passing ArrayOfIndex variables.
	Fixed problem with WSVs that access names of WSVs (ReadXML)

	* typhon/arts/workspace/api.py:
	- Update layout of VariableValueStruct

	* typhon/arts/workspace/variables.py:
	- Extended value() class method to support Sparse and ArrayOfIndex
	- Added ArrayOfIndex to supported groups in get_group_id.

	* typhon/arts/workspace/methods.py:
	- Fixed but in super-generic overlaod resolution
	- Create methods now support anonymous creation and return the WSV.

	* typhon/arts/workspace/workspace.py:
	- Updated implementation and documentation to be consistent with new
	  memory management in C API.

2017-08-23  Oliver Lemke  <olemke@core-dump.info>

	* setup.py: Add dependency on scikit-learn.

2017-08-23  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/workspace/__init__.py:

	Only import ARTS interface modules if ARTS_BUILD_PATH is set, otherwise
	output warning. Prevents nosetests from failing.

	* typhon/arts/workspace/api.py:

	Simplify arts_build_path check.

	Fix typo.

2017-08-22  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* doc/typhon.arts.rst: Added workspace sub-module to sphinx documentation.

	* typhon/arts/workspace/__init__.py: Module file for new workspace
	sub-module.

	* typhon/arts/workspace/workspace.py: Implementation of Workspace class.

	* typhon/arts/workspace/api.py: Interface to ARTS C API

	* typhon/arts/workspace/variables.py: Class and functions for handling ARTS
	WSVs

	* typhon/arts/workspace/methods.py: Class and functions for handling ARTS
	WSMs

	* typhon/arts/workspace/agendas.py: Class and functions for handling ARTS
	agendas.

2017-08-21  Gerrit Holl  <g.holl@reading.ac.uk>

	(HIRS._update_firstline_db):

	- Don't crash when fully contained in previous when considering max
	but not -1
